@@ -7,6 +7,7 @@
 - LWJGL3: Fix pauseWhenLostFocus not working as expected
 - API Addition: Added FPSLogger#setBound
 - Android: Fix crash on startup if `setContentView` was manually called after `initializeForView`
+- API Addition: Added Array#replaceFirst and Array#replaceAll
 
 [1.13.0]
 - [BREAKING CHANGE] GWT: Updated to 2.11.0. `com.google.jsinterop:jsinterop-annotations:2.0.2:sources` must be added as a dependency to your html project dependencies.
